--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.66.0",
+    "react-native-check-box": "^2.1.7",
     "react-native-responsive-fontsize": "^0.5.0",
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.2",
