--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "17.0.2",
     "react-native": "0.66.0",
     "react-native-check-box": "^2.1.7",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-responsive-fontsize": "^0.5.0",
+    "react-native-safe-area-context": "^3.3.2",
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
