--- a/package.json
+++ b/package.json
@@ -11,17 +11,22 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.2",
-    "@react-navigation/bottom-tabs": "^6.0.4",
-    "@react-navigation/native": "^6.0.1",
-    "@react-navigation/stack": "^6.0.1",
+    "@react-navigation/bottom-tabs": "^6.0.7",
+    "@react-navigation/elements": "^1.1.2",
+    "@react-navigation/material-bottom-tabs": "^6.0.7",
+    "@react-navigation/material-top-tabs": "^6.0.4",
+    "@react-navigation/native": "^6.0.4",
+    "@react-navigation/stack": "^6.0.9",
     "axios": "^0.21.1",
     "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.66.0",
     "react-native-check-box": "^2.1.7",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-paper": "^4.9.2",
     "react-native-responsive-fontsize": "^0.5.0",
     "react-native-safe-area-context": "^3.3.2",
+    "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
